Add missing resource types
